--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@react-oauth/google": "^0.12.1",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
