--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -11,10 +11,12 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "axios": "^1.7.9",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "express": "^4.21.2",
+        "googleapis": "^144.0.0",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.5",
