--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
+    "passport-facebook": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2"
