--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -4,8 +4,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node --env-file=.env index.js",
-        "dev": "node --watch --trace-warnings --env-file=.env index.js"
+        "start": "nodemon --env-file=.env index.js",
+        "dev": "nodemon --watch --trace-warnings --env-file=.env index.js"
     },
     "author": "",
     "license": "ISC",
@@ -17,6 +17,7 @@
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "express": "^4.21.2",
+        "express-session": "^1.18.1",
         "googleapis": "^144.0.0",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,8 @@
         "node-json-db": "^2.3.1",
         "nodemailer": "^6.10.0",
         "nodemon": "^3.1.9",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
         "speakeasy": "^2.0.0",
         "yup": "^1.6.1"
     }
